# Quill

./: .gitignore  CMakeLists.txt  README.md  kuire.kdev4  run.sh
src/: CMakeLists.txt  assets.qrc  main.cpp  main.qml  qml.qrc  server.cpp  server.h
src/components/: DrawCanvas.qml  Notebook.qml
src/models/: pagesmodel.cpp  pagesmodel.h
src/widgets/: Note.qml  Notebook.qml
